fixes buttons positioning bugs on mobile devices

--- a/style-guide/source/css/components/_button.scss
+++ b/style-guide/source/css/components/_button.scss
@@ -133,4 +133,11 @@ input[type="submit"], input[type="reset"]{
     margin-top: 0;
     display: block;
   }
+  button, input[type="submit"], input[type="reset"]{
+    width: 100%;
+  }
+  .btn--float-right, .card .btn.btn--float-right{
+    margin-top: 0;
+    max-width: 35%;
+  }
 }
